[package]
name    = "zrom"
version = "0.1.0"
edition = "2024"

[dependencies]
zstd = "0.13.3"
clap = { version = "4.6.0", features = ["derive"] }
filetime = "0.2.27"
thiserror = "2.0.18"
walkdir = "2.5.0"
rayon = "1.12.0"
bytesize = "2.3.1"
zip = "8.5.1"
sevenz-rust2 = "0.20.2"
unrar = "0.5.3"
flate2 = "1.1.9"
tar = "0.4.45"
xz2 = "0.1.7"
tempfile = "3.27.0"
globset = "0.4.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.4"
anyhow = "1.0.102"

[dev-dependencies]
sha2 = "0.11.0"